<resources>
    <string name="app_name">SMDFinalProject</string>
    <string name="admin">ADMIN</string>
    <string name="client">CLIENT</string>
    <string name="bus_pass_management_system">Bus Pass Management System</string>
    <string name="admin_login">Admin Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="accounts_handling">Accounts Handling</string>
    <string name="register_client">Register Client</string>
    <string name="show_clients">Show Clients</string>
    <string name="update_delete_client">Update/Delete Client</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="cnic">CNIC</string>
    <string name="phone_no">Phone No.</string>
    <string name="register_new_client">Register New Client</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="clients_records">Clients Records</string>
    <string name="buses_details">Buses Details</string>
    <string name="insert_new_bus">Add New Bus</string>
    <string name="tap_on_the_item_from_list_to_update_or_delete_it">Tap on the item from list to update or delete it</string>
    <string name="numberplate">NumberPlate</string>
    <string name="add">Add</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="price">Price</string>
    <string name="travellers_system">Traveller System</string>
    <string name="organize_a_trip">Organize A Trip</string>
    <string name="terminals">Terminals</string>
    <string name="welcome">Welcome</string>
    <string name="dont_have_an_account">Dont Have An Account</string>
    <string name="register_instead">Register Instead</string>
</resources>