<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BPMS_MainActivity"
    android:background="@drawable/backgroundgradient">

    <Button
        android:id="@+id/adminbtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="#15000000"
        android:gravity="center"
        android:onClick="AdminModule"
        android:text="@string/admin"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/clientbtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/client"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="#15000000"
        android:gravity="center"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminbtn"
        app:layout_constraintVertical_bias="0.109"
        android:onClick="ClientModule"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_radius_transparancy"
        android:gravity="center"
        android:text="@string/bus_pass_management_system"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>